<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:tag="PREFERENCE_TAG"
    >

    <ListPreference
        android:key="@string/pref_sort_key"
        android:title="@string/pref_sort"
        android:entries="@array/pref_sort_options"
        android:entryValues="@array/pref_sort_values"
        android:defaultValue="@string/pref_sort_default"
        />

    <ListPreference
        android:key="@string/pref_search_key"
        android:title="@string/pref_search"
        android:entries="@array/pref_search_options"
        android:entryValues="@array/pref_search_values"
        android:defaultValue="@string/pref_search_default"
        />

</PreferenceScreen>